Thu Oct 17 14:06:39 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c (newobj_i): fix memory leak.
	  There is possibility to remain info due to missing FREEOBJ event.
	  FREEOBJ events are skipped while suppress_tracing state, for example,
	  during trace events are invoking.

Thu Oct 17 12:30:16 2013  Tanaka Akira  <akr@fsij.org>

	* lib/tsort.rb (TSort.each_strongly_connected_component_from):
	  Extracted from TSort#each_strongly_connected_component_from.

Thu Oct 17 11:07:06 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 941c21a.  Changes:

	  Restored method bundler wants to remove for compatibility.

	  Improvements to Gemfile compatibility.

	* test/rubygems:  ditto.

Thu Oct 17 08:08:11 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c (newobj_i): add workaround.
	  some bugs hits this check.

	* ext/objspace/object_tracing.c (object_allocations_reporter_i): cast as pointer.

Thu Oct 17 07:36:53 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 2abce58.  Changes:

	  Fixed documentation generation when sdoc and json are installed as
	  gems.

	  Added some missing documentation.

Thu Oct 17 07:10:26 2013  Zachary Scott  <e@zzak.io>

	* ext/curses/curses.c: [DOC] Cleaned up formatting consistency of rdoc
	  comments for Curses, including period spacing and column width.

	  This patch also fixed some typos. Thanks to @postmodern for the patch!
	  [Fixes GH-420] https://github.com/ruby/ruby/pull/420

Thu Oct 17 06:58:42 2013  Zachary Scott  <e@zzak.io>

	* ext/date/date_core.c: [DOC] plural grammar fixed by @scott113341
	  Contributed via documenting-ruby.org: documenting-ruby/ruby#16
	  https://github.com/documenting-ruby/ruby/pull/16

Thu Oct 17 05:52:31 2013  Zachary Scott  <e@zzak.io>

	* ext/io/nonblock/nonblock.c: [DOC] Document io/nonblock by reprah
	  [Fixes GH-418] https://github.com/ruby/ruby/pull/418 based on the